--- a/length_penalty_metrics_tests/config/test_length_penalty_metric_speed_6d.yaml
+++ b/length_penalty_metrics_tests/config/test_length_penalty_metric_speed_6d.yaml
@@ -1,12 +1,12 @@
 #PLANNING CONFIGURATIONS:
 group_name: "manipulator"
 max_distance: 1
-n_tests: 10000
+n_tests: 100000
 
 # HUMAN-AWARE COST FUNCTION CONFIGURATION
 base_frame: "world"
 tool_frame: "flange"
-max_step_size: 0.01
+max_step_size: 0.1 #to make parallel version faster than serial version, max step size should be max 1/100 max_distance
 object_type: "red_box"
-n_object: 0
-n_threads: 4
+n_object: 10
+n_threads: 8
