--- a/length_penalty_metrics_tests/config/test_length_penalty_metric.yaml
+++ b/length_penalty_metrics_tests/config/test_length_penalty_metric.yaml
@@ -3,6 +3,7 @@ group_name: "cartesian_arm"
 utopia_tolerance: 0.05
 extend: false
 max_distance: 0.5
+rewire_radius: 0.51
 start_configuration: [0.0,0.0,0.0]
 stop_configuration:  [3.0,3.0,3.0]
 solver_time: 60.0
@@ -10,7 +11,8 @@ solver_time: 60.0
 # HUMAN-AWARE COST FUNCTION CONFIGURATION
 base_frame: "world"
 tool_frame: "end_effector"
-max_step_size: 0.05
+max_step_size: 0.005
 object_type: "red_box"
 n_object: 10
 n_threads: 10
+parallel_ssm: true
