--- a/length_penalty_metrics_tests/config/test_length_penalty_metric.yaml
+++ b/length_penalty_metrics_tests/config/test_length_penalty_metric.yaml
@@ -11,8 +11,16 @@ solver_time: 60.0
 # HUMAN-AWARE COST FUNCTION CONFIGURATION
 base_frame: "world"
 tool_frame: "end_effector"
-max_step_size: 0.005
 object_type: "red_box"
 n_object: 10
-n_threads: 10
-parallel_ssm: true
+
+max_step_size: 0.005
+max_cart_acc: 2.5
+Tr: 0.15
+min_distance: 0.3
+v_h: 1.6
+
+parallel_ssm: false
+n_threads: 4
+
+display_tree: true
