--- a/length_penalty_metrics_tests/config/test_length_penalty_metric.yaml
+++ b/length_penalty_metrics_tests/config/test_length_penalty_metric.yaml
@@ -11,13 +11,15 @@ solver_time: 60.0
 # HUMAN-AWARE COST FUNCTION CONFIGURATION
 base_frame: "world"
 tool_frame: "end_effector"
-object_type: "red_box"
-n_object: 10
+object_type: "sphere"
+n_object: 20
+poi_names: ["end_effector"]
+use_vh: true
 
 max_step_size: 0.005
 max_cart_acc: 2.5
 Tr: 0.15
-min_distance: 0.3
+min_distance: 0.2
 v_h: 1.6
 
 parallel_ssm: false
