--- a/length_penalty_metrics_tests/config/test_length_penalty_metric_speed_3d_simple.yaml
+++ b/length_penalty_metrics_tests/config/test_length_penalty_metric_speed_3d_simple.yaml
@@ -1,12 +1,18 @@
 #PLANNING CONFIGURATIONS:
 group_name: "cartesian_arm"
 max_distance: 1
-n_tests: 100000
+n_tests: 10000
 
 # HUMAN-AWARE COST FUNCTION CONFIGURATION
 base_frame: "world"
 tool_frame: "end_effector"
-max_step_size: 0.1  #to make parallel version faster than serial version, max step size should be max 1/10 max_distance
-object_type: "red_box"
-n_object: 10
-n_threads: 8
+object_type: "sphere"
+n_object: 20
+
+poi_names: ["end_effector"]
+ssm_max_step_size: 0.01  #to make parallel version faster than serial version, max step size should be max 1/10 max_distance
+ssm_n_threads: 4
+max_cart_acc: 2.5
+Tr: 0.15
+min_distance: 0.2
+v_h: 1.6
