--- a/length_penalty_metrics_tests/package.xml
+++ b/length_penalty_metrics_tests/package.xml
@@ -14,6 +14,7 @@
   <exec_depend>roscpp</exec_depend>
 
   <depend>length_penalty_metrics</depend>
+  <depend>ssm15066_estimators</depend>
   <depend>object_loader_msgs</depend>
 
   <export>
