--- a/length_penalty_metrics_tests/CMakeLists.txt
+++ b/length_penalty_metrics_tests/CMakeLists.txt
@@ -6,13 +6,13 @@ set(CMAKE_BUILD_TYPE Release)
 #set(CMAKE_BUILD_TYPE Debug)
 
 find_package(catkin REQUIRED COMPONENTS
-  length_penalty_metrics ssm15066_estimators object_loader_msgs roscpp
+  length_penalty_metrics ssm15066_estimators nn_ssm object_loader_msgs roscpp
 )
 
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES length_penalty_metrics_tests
-  CATKIN_DEPENDS length_penalty_metrics ssm15066_estimators object_loader_msgs roscpp
+  CATKIN_DEPENDS length_penalty_metrics ssm15066_estimators object_loader_msgs roscpp nn_ssm
   DEPENDS
 )
 
@@ -42,5 +42,11 @@ ${catkin_LIBRARIES}
 add_executable( test_rosdyn_clone src/test_rosdyn_clone.cpp)
 add_dependencies( test_rosdyn_clone ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries( test_rosdyn_clone
+${catkin_LIBRARIES}
+)
+
+add_executable( test_nn_performance src/test_nn_performance.cpp)
+add_dependencies( test_nn_performance ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries( test_nn_performance
 ${catkin_LIBRARIES}
 )
